13019w - added tagging and archiving sections, cleaned up various other chapters, fixed all the bad markup

--- a/text.textile
+++ b/text.textile
@@ -641,19 +641,19 @@ Although that will work for all of your development needs - many developers simp
 
 Let's say we add a new function to our 'lib/simplegit.rb' file, add a new task to our 'Rakefile' and then add a new 'TODO' file to our project.  Later we come back and want to commit, but we don't remember which files had to do with each other and we don't just want to commit them all together because that's confusing for collaborators trying to review our code. 'Interactive' mode let's us modify our index interactively before committing.  To fire it up, type 'git add -i':
 
-.shell s2/interactive-mode1.txt
+shell. interactive-mode1.txt
 
 We can see that we have two files that are being tracked (have been added at some point in the past) that have been modified.  We cannot yet see our new TODO file, though.  To add that, type '4' for the 'add untracked' option and hit enter.
 
-.shell s2/interactive-mode2.txt
+shell. interactive-mode2.txt
 
 You will see all the untracked files in your working directory.  Type the numbers of the files you want to add and hit enter twice when you're done. This will drop you back to the main menu.  You can then type '1' to see what your index looks like now.
 
-.shell s2/interactive-mode3.txt
+shell. interactive-mode3.txt
 
 You can see that the TODO file is now staged (in the index), but the other two are not.  Let's add the Rakefile, but not the 'lib/simplegit.rb' file and commit it. To do that, we hit '2', which lists the files we can update, type '1' and enter to add the Rakefile, then hit enter again to go back to the main menu.  Then we hit '7' to exit and run the 'git commit' command
 
-.shell s2/interactive-mode4.txt
+shell. interactive-mode4.txt
 
 The interactive shell is pretty simple - playing with it instead of running 'git add' commands directly may help in understanding what's happening, since you can see the status of your files in the index versus the working directory more clearly.  It helps visualize that what is in your index (the 'staged' column) is what will be committed when you run 'git commit'
 
@@ -695,7 +695,7 @@ With '--pretty', you can choose between oneline, short, medium, full, fuller, em
 
 h3. Filtering Log Output
 
-There are also a number of options for filtering the log output.  You can specify the maximum number of commits you want to see with '-n', you can limit the range of dates you want to see commits for with --since and --until, you can filter it on the author or committer, text in the commit message and more.  Here is an example showing the last 30 commits between yesterday and a month ago by me with 'controller' in the message:
+There are also a number of options for filtering the log output.  You can specify the maximum number of commits you want to see with '-n', you can limit the range of dates you want to see commits for with --since and --until, you can filter it on the author or committer, text in the commit message and more.  Here is an example showing the last 30 commits between yesterday and a month ago by me :
 
 shell. git log -n 30 --since="1 month ago" --until=yesterday --author="schacon"
 
@@ -713,17 +713,17 @@ h4. Showing Commits
 
 If you call it on a tree-ish that is a commit object, you will get simple information about the commit (the author, message, date, etc) and a diff of what changed between that commit and it's parents.
 
-.shell git-show-commit.txt
+shell. git-show-commit.txt
 
 h4. Showing Trees
 
 Instead of the 'git show' command, it's generally more useful to use the lower level 'git ls-tree' command to view trees, because it gives you the shas of all the blobs and trees that it points to.
 
-.shell git-lstree1.txt
+shell. git-lstree1.txt
 
 You can also run this command recursively, so you can see all the subtrees as well.  This is a great way to get the sha of any blob anywhere in the tree without having to walk it one node at a time.  
 
-.shell git-lstree2.txt
+shell. git-lstree2.txt
 
 The '-t' makes it also show the shas of the subtrees themselves, rather than just all the blobs.
 
@@ -731,7 +731,7 @@ h4. Showing Blobs
 
 Lastly, you may want to extract the contents of individual blobs.  The 'cat-file' command is an easy way to do that, and can also serve to let you know what type of object a sha is, if you happen to not know.  It is sort of a catch-all command that you can use to inspect objects.
 
-.shell git-catfile.txt
+shell. git-catfile.txt
 
 With those basic commands, you should be able to explore and inspect any object in any git repository relatively easily.
 
@@ -749,17 +749,28 @@ h3. What has changed?
 
 If you simply run 'git diff' with no arguments, it will show you the differences between your current working directory and my index, that is, the last time I ran 'git add' on my files.  For example, if I add my email to the README file and run it, I will see this:
 
-.shell git-diff-readme.txt
+shell. git-diff-readme.txt
 
 You can also use 'git diff' to show you some spiffy stats for a diff, rather than a patch file, if you want to see a wider overview of what changed, then drill down into specific files later.  Here are some examples getting stats, the first for the differences between two commits and the second a summary between a commit and the current HEAD.
 
-.shell git-diff-stat.txt
+shell. git-diff-stat.txt
 
 If you want to see what the specific difference is in one of those files, you can just add a path limiter to the diff command.
 
-.shell git-diff-file.txt
+shell. git-diff-file.txt
 
 You can use this command to detect changes between your index and any tree, or your working directory and any tree, your working directory and your index, etc.
+
+h3. Generating Patch Files
+
+The default output of the 'git diff' command is a valid patch file.  If you pipe the output into a file and email it to someone, they can apply it with the 'patch' command.  If you've done some work off of a project in an 'experiment' branch, you could create a patch file this way:
+
+shell. $> git diff master..experiment > experiment.patch
+
+You can then email that file to anyone, who could apply it with the '-p1' argument:
+
+shell. $>patch -p1 < ~/experiment.patch 
+patching file lib/simplegit.rb
 
 * "git diff":http://www.kernel.org/pub/software/scm/git/docs/git-diff.html
 
@@ -771,29 +782,29 @@ h3. Switching Branches
 
 However, let's say we're working on our project and we want to add a new function to our library, so we'll make a new branch called 'newfunc' and switch to it.  There are two ways we can do this, one is to create the branch and then switch to it:
 
-.shell $>git branch newfunc; git checkout newfunc
+shell. $>git branch newfunc; git checkout newfunc
 
 The other way is to checkout a branch that doesn't exist yet and tell git you want to create it by passing the '-b' flag:
 
-.shell $> git checkout -b newfunc
+shell. $> git checkout -b newfunc
 
 Now, to check which branch we are on, we just type 'git branch':
 
-.shell git-branch.txt
+shell. git-branch.txt
 
 We can see we are now on our new branch.  This means that if we modify a file and commit it, this branch will include that change, but the 'master' branch will not have it yet.  So, we add a new method to our library and commit it.
 
-.shell $> vim lib/simplegit.rb; git commit -a -m 'added lstree function'
+shell. $> vim lib/simplegit.rb; git commit -a -m 'added lstree function'
 Created commit 1a8c32e: added lstree function
  1 files changed, 4 insertions(+), 0 deletions(-)
  
 Now we want to change something in the README in the 'master' branch, but we haven't tested this function yet so we don't want to merge our new branch in yet.  That's fine, we just switch back and make the change.
 
-.shell git-checkout-master-work.txt
+shell. git-checkout-master-work.txt
 
 Now lets see what the differences in our branches are.
 
-.shell git-branch-diff.txt
+shell. git-branch-diff.txt
 
 We could also get a patch file for one to apply to the other, but what we really want to do next is merge the two.
 
@@ -805,13 +816,13 @@ h2. Simple Merging
 
 So now we want to move the changes in our 'newfunc' branch back into our 'master' branch and remove it.  This will require us merging one branch into another.  Since we're already in our 'master' branch, we'll merge in the 'newfunc' branch like this:
 
-.shell $>git merge newfunc
+shell. $>git merge newfunc
 
 Easy peasy.  We can see that the simplegit.rb file now has 4 new lines and the README file was auto-merged.
 
 Now we can get rid of our 'newfunc' branch with a simple:
 
-.shell $>git branch -d newfunc
+shell. $>git branch -d newfunc
 Deleted branch newfunc.
 
 h3. Resolving Conflicts
@@ -820,19 +831,19 @@ That was a fairly simple problem, but what if we branch our code and then edit t
 
 Let's say that we created a 'versioning' branch and then modified the version in the Rakefile to different versions in both the new branch and the 'master' branch, then tried to merge them together.
 
-.shell s2/merge-conflict.txt
+shell. merge-conflict.txt
 
 It tells us that there was a conflict and so the new commit object was not created.  We will have to merge the conflicted file manually and then commit it again.  The output tells us the files that had conflicts, in this case it was the Rakefile.
 
-.ruby s2/rakefile.rb
+ruby. rakefile.rb
 
 We can see that in the 'master' branch, the version was changed to '0.1.2' and in the 'versioning' branch, the same line was changed to '0.2.0'.  All we have to do is choose which one is correct and remove the rest of the lines, like so:
 
-.ruby s2/rakefile-post.rb
+ruby. rakefile-post.rb
 
 Now we add and commit that file, and we're good.
 
-.shell $>git add Rakefile 
+shell. $>git add Rakefile 
 $>git commit -m 'fixed conflict'
 Created commit 47c668a: fixed conflict
 
@@ -842,11 +853,11 @@ Assume we have gone through some massive merge because someone on your team hasn
 
 This is where 'git reset' comes in.  To reset your working directory and index back to what it was before you tried the merge, simply run:
 
-.shell $>git reset --hard HEAD
+shell. $>git reset --hard HEAD
 
 The '--hard' makes sure both your index file and working directory are changed to match what it used it be. By default it will only reset your index, leaving the partially merged files in your working directory.  If you happen to have worked through it all and committed, then decided that it was a mistake because all of your tests break or something, you can still go back (and throw away that commit) by running:
 
-.shell $>git reset --hard ORIG_HEAD
+shell. $>git reset --hard ORIG_HEAD
 
 This is only helpful if you want to undo the latest change or changes.  If you happen to commit again then decide that you want to keep the latest commit, but undo a commit that was added sometime before that, you'll need to use 'git revert', which is covered in [History Manipulation]
 
@@ -866,7 +877,7 @@ If we do a simple merge, our history will look like this:
 
 But we don't want to mess up our history with a bunch of branches and merges when it can be clearer.  Instead of running 'git merge story84' from the master branch, we can stay in the 'story84' branch and run 'git rebase master'
 
-.shell rebase-conflict.txt
+shell. rebase-conflict.txt
 
 Many times this goes very smoothly and you can see all the new commits and trees written in place of the old ones.  In this case, I had edited the 'lib/simplegit.rb' file differently in each branch which caused a conflict.  I will have to resolve this conflict before I can continue the rebase.
 
@@ -898,19 +909,19 @@ Assume we have started working on a story to add the 'git add' functionality to 
 
 We can see before we try the merge that the same change is in each branch, and I can see that the master branch version is better, so I don't even really want to merge it, I just want to throw my change away.  Also, I don't really need the other two commits to be two commits, because the second one is just a tweak and could be squashed into the first one.  Lets use 'git rebase -i' to rebase this branch and make those changes.  When we run the command, our editor comes up, showing this:
 
-.code s2/repo-rebase.txt
+code. repo-rebase.txt
 
 Now we can see all of the commits that we are going to rebase.  If we remove the 'made ls-tree recursive' line, it effectively ditches that commit so we'll avoid a conflict and not have to worry about it.  Changing the action on the last line to 'squash' tells git to just make this and the previous commit into a single commit.  So if we exit the editor with this as the new text:
 
-.code s2/repo-rebase2.txt
+code. repo-rebase2.txt
 
 Then git sees we have squashed two commits and wants us to pick a commit message for it, giving us the commit messages of both for us to create a new one for.
 
-.code s2/repo-rebase3.txt
+code. repo-rebase3.txt
 
 So we stick with the first message, save and exit the editor.
 
-.shell s2/repo-rebase4.txt
+shell. repo-rebase4.txt
 
 Now we've rebased and instead of three commits on top of our master and having to reconcile a useless conflict, we've just added a single commit with no resolving neccesary:
 
@@ -922,6 +933,64 @@ The rebase command is one of the most useful and unique in the git workflow.  To
 * "git reset":http://www.kernel.org/pub/software/scm/git/docs/git-reset.html
 
 h2. Tagging
+
+As we previously covered, creating a tag in Git is much like making a branch.  A tag in Git serves is basically a signed branch that never moves - it is simply an arbitrary string that points to a specific commit.
+
+For example, if you wanted to tag your code base every time you released to production or created a new binary to release, you would run something like this:
+
+shell. $> git tag -a v0.1 -m 'this is my v0.1 tag'
+
+As we recall from section one, that command will create a git object that looks something like this:
+
+!../artwork/s1/tag-expand.png!
+
+and will store that in the '.git/objects/' directory and then will create a permanent reference to it in '.git/refs/tags/v0.1' that contains the sha of that tag.
+
+Then you can use that as a reference to that commit at any time in commands like 'diff' or 'archive' (see next chapter).
+
+h3. Lightweight Tags
+
+You can also create a tag that doesn't actually add a Tag object to the database, but just creates a reference to it in the '.git/refs/tags' directory.  If you run the following command:
+
+shell. $> git tag v0.1
+
+Git will create the same file as before, '.git/refs/tags/v0.1', but it will contain the sha of the current HEAD commit itself, not the sha of a Tag object pointing to that commit.  Unlike object Tags, these can be moved around easily, which is generally undesirable.
+
+h3. Signed Tags
+
+At the other end of the tagging spectrum, you can sign Tag object with a GPG key to ensure it's cryptographic integrity.  Replacing '-a' with '-s' in the command will create a Tag object and sign it with the current users email address GPG key.  If you want to specify a key, you can run it with '-u' instead:
+
+shell. $> git tag -u <key-id> v0.1 -m 'the 0.1 release'
+
+Then, you or others can later verify that signed tag with a '-v'
+
+shell. $> git tag -v v0.1
+
+* "git tag":http://www.kernel.org/pub/software/scm/git/docs/git-tag.html
+
+h2. Archiving Git
+
+If you want to create a release of your code, or provide some poor non-git user with a snapshot of just a specific tree, you can use the *git-archive* command.
+
+.note 'git-archive' used to be called 'git-tar-tree', in case you ever see that command around in older articles
+
+You can create the archive in either 'tar' or 'zip' formats, the default being 'tar'.  You can use the '--prefix' argument to determine what directory, if any, the files are expanded into. To create a gzipped tarball, you'll have to pipe the output through 'gzip' first.
+
+shell. $>git-archive --prefix=simplegit/ v0.1 | gzip > simple-git-0.1.tgz
+
+Then, if you email that tarball to someone, they would get this when they opened it:
+
+shell. git-archive.txt
+
+You can also archive parts of your project.  This command will create a zip file of just the 'lib' directory of the first parent of your master branch that will expand out into the current directory:
+
+shell. $>git-archive --format=zip master^ lib/ > simple-git-lib.zip
+
+Which will unzip like this:
+
+shell. git-archive-zip.txt
+
+* "git archive":http://www.kernel.org/pub/software/scm/git/docs/git-archive.html
 
 h2. Distributed Workflow Examples
 
@@ -940,19 +1009,19 @@ h4. Local Clones
 
 Local clones are the simplest types of clones - it is basically the equivalent of copying the .git directory and doing a checkout.  The only major difference is that it adds all the original branches in as origin branches.  Often you will do this when creating a bare repository (that is, a repository without a working directory) for putting on a public server, or if you're working with people using a shared repository over NFS or something similar.
 
-.shell $> git clone --bare simplegit/.git simplegit-bare.git
+shell. $> git clone --bare simplegit/.git simplegit-bare.git
 
 h4. SSH and Git Transports
 
 Cloning over ssh requires that you have user credentials on the machine you are cloning from.  The git transport does not have this authentication and so is normally used for fetching only.
 
-.shell $> git clone git@github.com:schacon/ticgit.git ticgit_directory
+shell. $> git clone git@github.com:schacon/ticgit.git ticgit_directory
 
 h4. HTTP and HTTPS Transports
 
 Another popular way to clone a repository is over HTTP, just because it is so simple.  You don't need to setup any special service or give out user credentials (made easier by services like gitosis), you simply scp your bare repository into any web server's static content directory.  It is not as efficient as the other protocols - it will transfer loose objects and packfiles over a number of calls instead of packing them up, but it is simple.
 
-.shell $> git clone http://git.gitorious.org/piston/mainline.git piston
+shell. $> git clone http://git.gitorious.org/piston/mainline.git piston
 
 Once you have run one of these commands, you will have a copy of the git repository, full of all the history - basically every blob and tree and commit that project has ever had.  This is really a full backup of the repository - if the main server ever goes down or gets corrupted, everyone who has ever cloned it has a fully capable backup that can replace it.  With Git, there is really no single point of failure.
 
@@ -963,7 +1032,7 @@ h3. Fetching and Pulling
 
 So let's say that we're going to hack on TicGit, our git based ticket tracking system project.  After we clone it, we look through the source code but don't do anything right away. After some time passes we come back to the project but it may not still be up to date - changes may have occurred in the meantime.  So we fetch an update.
 
-.shell $> git fetch origin
+shell. $> git fetch origin
 
 This will contact the server over the same protocol we used to clone it and grab all of the objects and references that have been added since our clone and update our 'origin/[branch]' branches to point to what the server is pointing at now.  
 
@@ -973,9 +1042,9 @@ At this point, we may want to merge 'origin/story84' into our local 'story84' br
 
 So, these commands are functionally equivalent:
 
-.shell $> git pull origin/story84
+shell. $> git pull origin/story84
 
-.shell $> git fetch origin/story84; git merge origin/story84
+shell. $> git fetch origin/story84; git merge origin/story84
 
 * "git fetch":http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html
 * "git pull":http://www.kernel.org/pub/software/scm/git/docs/git-pull.html
@@ -985,19 +1054,19 @@ h3. Pushing
 
 Now we can get updates from other repositories, but how can we push changes to them?  If we have commit rights on the repository (normally over ssh), we can simply run 'git push'
 
-.shell $> git push origin master
+shell. $> git push origin master
 
 The 'origin' in that case will be inferred if you leave it out, but if you've used a different name for your remote or you are trying to push one of your other branches, you can do that, too.
 
-.shell $> git push scott-public experimental
+shell. $> git push scott-public experimental
 
 If you don't specify a branch, it will infer that you want to push every branch that you and the server have in common.  So, if you have pushed your 'master' branch and your 'experimental' branch to the 'scott-public' server at any point, running this will update the server to have the newest versions of *both* of them:
 
-.shell $> git push scott-public
+shell. $> git push scott-public
 
 Whereas this will only update the 'master' branch:
 
-.shell $> git push scott-public master
+shell. $> git push scott-public master
 
 .note In Git, the opposite of 'push' is not 'pull', but 'fetch'. 
 A 'pull' is a 'fetch' and then a 'merge'.
@@ -1010,18 +1079,24 @@ Although a bit different in syntax maybe, most of that should seem familiar to a
 
 Pushing to and pulling from multiple sources is easy and straightforward. You simply add remotes :
 
-.shell $> git remote add mycap git@github.com:schacon/capistrano.git
+shell. $> git remote add mycap git@github.com:schacon/capistrano.git
 $> git remote add official git://github.com/jamis/capistrano.git
 
 Then, if the the project is updated, I can pull in the changes from one remote, merge them locally, and then push to another remote.
 
-.shell $> git fetch official
+shell. $> git fetch official
 $> git merge official/master
 $> git push mycap master
 
 I can also add several remotes to pull and merge from, in this case, one for every developer with a public fork of that project that might push changes I care to try.
 
 !../artwork/s2/fetch-pull.png!
+
+You can also remove remotes at any time, which simply removes the lines that contain the url in your '.git/config' file and the references to their remote branches in '.git/refs/[remote_name]' directory.  It will not remove any of the git objects, so if you decide to add it again and fetch, very little will be transferred.
+
+You can also view useful information about a remote branch by using the 'remote show' command.  For example, if I run this on a checkout of the Git source code itself, I will see this:
+
+shell. git-remote-show.txt
 
 * "git remote":http://www.kernel.org/pub/software/scm/git/docs/git-remote.html
 
@@ -1071,19 +1146,17 @@ In the end, there is really no single 'right way' to do it - being a decentraliz
 
 
 
-h2. All About Remotes (refspec)
-
-.todo more about tracking branches and what they do
-
 h2. Sharing Repositories
 
 h3. Over Git
 
-Git provides it's own special protocol, which is basically just a really thin wrapper over the 'git-upload-pack' command that will tell you what is available, then you tell it what you have and it gives you a packfile of the difference.  To start it up, run something like the following command:
+Git provides it's own special protocol, which is basically just a really thin wrapper over the 'git-upload-pack' command that will tell you what is available, then you tell it what you have and it gives you a packfile of the difference.  To start it up manually, run something like the following command:
 
-.shell $> git daemon --detach
+shell. $>git-daemon --detach --export-all --base-path=/opt/git /opt/git/ambition
+ 
+Though for long term running, you'll likely want to add this to your inet.d configuration.  See the "git-daemon":http://www.kernel.org/pub/software/scm/git/docs/git-daemon.html docs for specific information on how to set that up.
 
-The git protocol has no built in authentication, so generally you cannot push over it (although some people have open push policies and so allow that - I would not recommend setting that up, so you'll have to look up how to do that).  If you want your users to have push access, it's recommended to use the ssh protocol.  Many repositories, like GitHub, have ssh enabled for account owners to push over, and git enabled for the public to pull over - which is often the most efficient combination.
+The git protocol has no built in authentication, so generally you cannot push over it (although some people have open push policies and so allow that - I would not recommend setting that up, so you'll have to look up how to do that).  If you want your users to have push access, it's recommended to use the ssh protocol.  Many repositories, like GitHub, have ssh enabled for account owners to push over, and git-daemon enabled for the public to pull over - which is often the most efficient combination.
 
 * "git-daemon":http://www.kernel.org/pub/software/scm/git/docs/git-daemon.html
 
@@ -1091,24 +1164,39 @@ h3. Over SSH
 
 Git can work entirely over SSH - it actually does much the same thing that happens over the git protocol, except it implicitly has authentication built in, so if the user they are ssh'ing in as has access to write to the repo, then that user can push over ssh as well.
 
-.shell $> git clone --bare; scp
+shell. $> git clone --bare; scp
 
-h3. Over Http
+h3. Over HTTP
 
 this is pretty easy to setup because there is no requirement other than a static web server - it is not like SVN which requires a DAV server to run.  If you want to push over http, however, you will need DAV setup - it's generally a much better idea to use ssh to do so, however.
 
 The only caveat is that you need to run 'git update-server-info' each time you commit to the repository.
 
-.shell $> git update-server-info
+shell. $> git update-server-info
 
-It is generally a good idea to put this in the 
+It is generally a good idea to put this in the post-commit hook file on any server that you want to be able to fetch from over HTTP.
 
 .sidebar actually, you can run this without update-server-info if you never pack objects and you have a pre-defined list of branches you are always fetching.  All that update-server-info does is put a list of branches into one file (.git/info/refs) and a list of pack files into another (.git/objects/info/pack) to get around the fact that you cannot reliably list contents of a directory over http - it's not built into the protocol. So for git to know what packfiles and branches are available, it needs to have one url it can get those from.
 
-h4. Hosted Repositories
+h2. Hosted Repositories
 
+If you don't want to deal with setting up and maintaining your own server for your git repository, you can use one of the growing number of public Git hosted servers.  
+
+I will focus on some interesting features of a commercial service called "GitHub":http://github.com here, but there is also an open source project called "Gitorious":http://gitorious.com that has many of the same features.
+
+My focus on GitHub is only because it has private repos for commercial projects, the open source ones are free, and many popular projects featured in the Peepcode series, including Ruby on Rails, Merb, RSpec, and Capistrano are hosted there.
 
 h3. GitHub
+
+open source software repos are free
+
+closed source or multiple committers cost
+
+social networking
+ - watching people and projects
+ - forking a project
+ - sending a pull request
+
 
 h1. Section Three - Git and Other Systems
 
@@ -1165,6 +1253,10 @@ splitting commits in interactive mode
 http://www.kernel.org/pub/software/scm/git/docs/git-mergetool.html
 
 http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html
+
+h2. All About Remotes (refspec)
+
+.todo more about tracking branches and what they do
 
 h2. History Manipulation
 
@@ -1268,6 +1360,8 @@ h2. The HTTP Transport
 
 h3. HTTP walking
 
+h2. The Index File
+
 h1. References and Endnotes
 
 Here are some references that I used or that you may use to find out more about Git.
@@ -1279,6 +1373,8 @@ h2. Web Documentation
 
 "Main Git Documentation":http://www.kernel.org/pub/software/scm/git/docs/
 - fantastic reference for all the command line programs
+
+"Git User's Manual":http://www.kernel.org/pub/software/scm/git/docs/user-manual.html
 
 "Git for Computer Scientists":http://eagain.net/articles/git-for-computer-scientists/
 - good detail about the DAG object model
