--- a/text/s2-c06-git-diff.textile
+++ b/text/s2-c06-git-diff.textile
@@ -8,16 +8,27 @@ h3. What has changed?
 
 If you simply run 'git diff' with no arguments, it will show you the differences between your current working directory and my index, that is, the last time I ran 'git add' on my files.  For example, if I add my email to the README file and run it, I will see this:
 
-.shell git-diff-readme.txt
+shell. git-diff-readme.txt
 
 You can also use 'git diff' to show you some spiffy stats for a diff, rather than a patch file, if you want to see a wider overview of what changed, then drill down into specific files later.  Here are some examples getting stats, the first for the differences between two commits and the second a summary between a commit and the current HEAD.
 
-.shell git-diff-stat.txt
+shell. git-diff-stat.txt
 
 If you want to see what the specific difference is in one of those files, you can just add a path limiter to the diff command.
 
-.shell git-diff-file.txt
+shell. git-diff-file.txt
 
 You can use this command to detect changes between your index and any tree, or your working directory and any tree, your working directory and your index, etc.
+
+h3. Generating Patch Files
+
+The default output of the 'git diff' command is a valid patch file.  If you pipe the output into a file and email it to someone, they can apply it with the 'patch' command.  If you've done some work off of a project in an 'experiment' branch, you could create a patch file this way:
+
+shell. $> git diff master..experiment > experiment.patch
+
+You can then email that file to anyone, who could apply it with the '-p1' argument:
+
+shell. $>patch -p1 < ~/experiment.patch 
+patching file lib/simplegit.rb
 
 * "git diff":http://www.kernel.org/pub/software/scm/git/docs/git-diff.html
